--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,4 +1,7 @@
 {
+  "compilerOptions": {
+    "types": ["./types","./ui-types"]
+  },
   "files": [],
   "exclude": ["src/electron"],
   "references": [
