--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "mss-react",
+  "name": "sinai-worship",
   "private": true,
-  "version": "0.0.0",
+  "version": "0.1.0",
   "type": "module",
   "main": "dist-electron/main.js",
   "icon": "./icon.png",
