--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "dist:win": "npm run transpile:electron && npm run build && electron-builder --win --x64"
   },
   "dependencies": {
+    "fast-fuzzy": "^1.12.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
